# FlowEcho-Wave-Nexus

./: .gitignore  LICENSE  README.md  baidu_verify_codeva-ocVBwmPkny.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: index.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: handPy_v3_ForwardLooking.md  hello_world.md
docs/blog/posts/hPy88/250601/: upd_lvgl2fbuf.md
docs/discussion/: index.md
docs/history/: index.md
docs/members/: index.md
docs/stylesheets/: extra.css
docs/wiki/: DifficultCases.md  How2Contribute.md  index.md
docs/wiki/HandPy_V2/: Docs_QSTR.md  FirmwareCompile.md  IntegratedDebugger.md
docs/wiki/HandPy_V3/LVGL/: QuickStart.md  align.md
docs/wiki/HandPy_V3/LVGL/Binding4mPy/: QuickStart.md  align.md
docs/wiki/hPy_v2/: Docs_QSTR.md  FirmwareCompile.md  IntegratedDebugger.md
overrides/: main.html
scripts/: main.ts
tools/: firststep.bat  run.bat
