[project]
name = "flowecho-wave-nexus"
version = "0.1.0"
description = "FlowEcho Wave Nexus"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-glightbox==0.4.0",
    "mkdocs-markdownextradata-plugin==0.2.6",
    "mkdocs-material==9.6.12",
    "mkdocs-material-extensions==1.3.1",
]
